fix: le bouton permettant de fermer menu et popup n'était plus visible

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -137,6 +137,9 @@ textarea {
   color: var(--main-btn-text-color);
 }
 
+.fr-btn--close {
+  color: var(--main-color);
+}
 .fr-btn--icon-center {
   justify-content: center;
 }
